--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,6 @@ services:
     volumes:
       - ./docker/mysql/master/data:/var/lib/mysql
       - ./docker/mysql/master/conf/my.cnf:/etc/mysql/my.cnf
-    #      - ./docker/mysql/sql:/docker-entrypoint-initdb.d/
     command: 
         - "--server-id=1"    
         - "--default-authentication-plugin=mysql_native_password"
@@ -30,7 +29,7 @@ services:
         - "--slave_skip_errors=1062"
     restart: always
     networks:
-      mysql-network:
+      app-network:
         ipv4_address: 172.19.182.0
 
   mysql-slave1:
@@ -47,7 +46,6 @@ services:
     volumes:
       - ./docker/mysql/slave1/data:/var/lib/mysql
       - ./docker/mysql/slave1/conf/my.cnf:/etc/mysql/my.cnf
-    #      - ./docker/mysql/sql:/docker-entrypoint-initdb.d/
     command: 
         - "--server-id=2"    
         - "--default-authentication-plugin=mysql_native_password"
@@ -61,7 +59,7 @@ services:
         - "--slave_skip_errors=1062"  
     restart: always
     networks:
-      mysql-network:
+      app-network:
         ipv4_address: 172.19.182.1
 
   mysql-slave2:
@@ -78,7 +76,6 @@ services:
     volumes:
       - ./docker/mysql/slave2/data:/var/lib/mysql
       - ./docker/mysql/slave2/conf/my.cnf:/etc/mysql/my.cnf
-#      - ./docker/mysql/sql:/docker-entrypoint-initdb.d/
     command: 
         - "--server-id=3"    
         - "--default-authentication-plugin=mysql_native_password"
@@ -92,7 +89,7 @@ services:
         - "--slave_skip_errors=1062"  
     restart: always
     networks:
-      mysql-network:
+      app-network:
         ipv4_address: 172.19.182.2
 
   mysql-slave3:
@@ -109,7 +106,6 @@ services:
     volumes:
       - ./docker/mysql/slave3/data:/var/lib/mysql
       - ./docker/mysql/slave3/conf/my.cnf:/etc/mysql/my.cnf
-#      - ./docker/mysql/sql:/docker-entrypoint-initdb.d/
     command: 
         - "--server-id=4"    
         - "--default-authentication-plugin=mysql_native_password"
@@ -123,7 +119,7 @@ services:
         - "--slave_skip_errors=1062"  
     restart: always
     networks:
-      mysql-network:
+      app-network:
         ipv4_address: 172.19.182.3
 
   mysql-slave4:
@@ -140,7 +136,6 @@ services:
     volumes:
       - ./docker/mysql/slave4/data:/var/lib/mysql
       - ./docker/mysql/slave4/conf/my.cnf:/etc/mysql/my.cnf
-#      - ./docker/mysql/sql:/docker-entrypoint-initdb.d/
     command: 
         - "--server-id=5"    
         - "--default-authentication-plugin=mysql_native_password"
@@ -154,7 +149,7 @@ services:
         - "--slave_skip_errors=1062"  
     restart: always
     networks:
-      mysql-network:
+      app-network:
         ipv4_address: 172.19.182.4
 
 
@@ -172,7 +167,6 @@ services:
     volumes:
       - ./docker/mysql/slave5/data:/var/lib/mysql
       - ./docker/mysql/slave5/conf/my.cnf:/etc/mysql/my.cnf
-#      - ./docker/mysql/sql:/docker-entrypoint-initdb.d/
     command: 
         - "--server-id=6"    
         - "--default-authentication-plugin=mysql_native_password"
@@ -186,11 +180,124 @@ services:
         - "--slave_skip_errors=1062"  
     restart: always
     networks:
-      mysql-network:
+      app-network:
         ipv4_address: 172.19.182.5
 
+
+
+
+
+  redis-master1:
+    image: redis:6.0.10
+    container_name: redis-master1
+    ports:
+      - "6380:6379"
+    environment:
+      - REDISCLI_AUTH=Admin,123   
+    volumes:
+      - ./docker/redis/master1/data:/data/redis/data
+      - ./docker/redis/master1/conf/redis.conf:/etc/redis.conf
+    tty: true
+    command: ["redis-server", "/etc/redis.conf"]      
+    restart: always
+    networks:
+      app-network:
+        ipv4_address: 172.19.182.6
+    
+
+  redis-master2:
+    image: redis:6.0.10
+    container_name: redis-master2
+    ports:
+      - "6381:6379"
+    environment:
+      - REDISCLI_AUTH=Admin,123   
+    volumes:
+      - ./docker/redis/master2/data:/data/redis/data
+      - ./docker/redis/master2/conf/redis.conf:/etc/redis.conf
+    tty: true
+    command: ["redis-server", "/etc/redis.conf"]      
+    restart: always
+    networks:
+      app-network:
+        ipv4_address: 172.19.182.7
+    
+
+  redis-master3:
+    image: redis:6.0.10
+    container_name: redis-master3
+    ports:
+      - "6382:6379"
+    environment:
+      - REDISCLI_AUTH=Admin,123   
+    volumes:
+      - ./docker/redis/master3/data:/data/redis/data
+      - ./docker/redis/master3/conf/redis.conf:/etc/redis.conf
+    tty: true
+    command: ["redis-server", "/etc/redis.conf"]      
+    restart: always
+    networks:
+      app-network:
+        ipv4_address: 172.19.182.8
+    
+
+  redis-slave1:
+    image: redis:6.0.10
+    container_name: redis-slave1
+    ports:
+      - "6383:6379"
+    environment:
+      - REDISCLI_AUTH=Admin,123   
+    volumes:
+      - ./docker/redis/slave1/data:/data/redis/data
+      - ./docker/redis/slave1/conf/redis.conf:/etc/redis.conf
+    tty: true
+    command: ["redis-server", "/etc/redis.conf"]      
+    restart: always
+    networks:
+      app-network:
+        ipv4_address: 172.19.182.9
+    
+
+
+  redis-slave2:
+    image: redis:6.0.10
+    container_name: redis-slave2
+    ports:
+      - "6384:6379"
+    environment:
+      - REDISCLI_AUTH=Admin,123   
+    volumes:
+      - ./docker/redis/slave2/data:/data/redis/data
+      - ./docker/redis/slave2/conf/redis.conf:/etc/redis.conf
+    tty: true
+    command: ["redis-server", "/etc/redis.conf"]      
+    restart: always
+    networks:
+      app-network:
+        ipv4_address: 172.19.182.10
+    
+
+  redis-slave3:
+    image: redis:6.0.10
+    container_name: redis-slave6
+    ports:
+      - "6385:6379"
+    environment:
+      - REDISCLI_AUTH=Admin,123  
+    volumes:
+      - ./docker/redis/slave3/data:/data/redis/data
+      - ./docker/redis/slave3/conf/redis.conf:/etc/redis.conf
+    tty: true
+    command: ["redis-server", "/etc/redis.conf"]      
+    restart: always      
+    networks:
+      app-network:
+        ipv4_address: 172.19.182.11
+                       
+
 networks:
-  mysql-network:
+  app-network:
     ipam:
       config:
         - subnet: 172.19.182.0/16
