--- a/docker/redis/master1/conf/redis.conf
+++ b/docker/redis/master1/conf/redis.conf
@@ -291,7 +291,8 @@ dir ./
 # refuse the replica request.
 #
 # masterauth <master-password>
-masterauth Admin,123
+# 修改为自己的密码
+masterauth xxx 
 
 # When a replica loses its connection with the master, or when the replication
 # is still in progress, the replica can act in two different ways:
@@ -506,7 +507,9 @@ replica-priority 100
 # use a very strong password otherwise it will be very easy to break.
 #
 # requirepass foobared
-requirepass Admin,123
+# 修改为自己的密码
+
+requirepass xxxx
 
 # Command renaming.
 #
